# stealthmark

./: .gitignore  README.md  cli.py  config.ini  debug_m4a.py  pyproject.toml  requirements.txt  setup.py
config/: settings.py
docs/: API.md  DESIGN.md  DETAILED_DESIGN.md  SRS.md  TEST_FRONTEND.md
skills/stealthmark/: SKILL.md
skills/stealthmark/assets/: config-template.json
skills/stealthmark/references/: algorithms.md  cli-reference.md  formats.md
skills/stealthmark/scripts/: batch.py  embed.py  extract.py  verify.py
src/: __init__.py
src/core/: manager.py
src/document/: pdf_watermark.py  rtf_watermark.py
src/image/: __init__.py  heic_handler.py  image_watermark.py  tiff_webp_gif_watermark.py
src/media/: __init__.py  aac_handler.py  audio_watermark.py  flac_handler.py  ogg_handler.py  video_watermark.py  wmv_handler.py
src/stealthmark/: __init__.py  __main__.py  api.py  cli.py  gui.py
stealthmark/: __init__.py  __main__.py  api.py  gui.py
tests/: TEST_REPORT.md
tests/fixtures/: test.aac  test.avi  test.docx  test.epub  test.flac  test.heic  test.m4a  test.mkv  test.mov  test.odp  test.odt  test.pptx  test.rtf  test.tif  test.tiff  test.webm  test.wmv  test.xlsx  test_docx_out.docx  test_encode.m4a  test_m4a.m4a  test_m4a_long.m4a  test_out.epub  test_out.ods  test_out.rtf  test_out.xlsx  test_pptx_out.pptx  test_webm.webm  test_xlsx.xlsx  verify_docx_out.docx  verify_pptx_out.pptx
tests/scripts/: generate_missing_files.py  test_all.py  test_all_formats.py  test_api.py  test_ffmpeg.py  test_gui.py  test_new_handlers.py  test_smoke.py  test_verify.py  test_video_handler.py
tests/unit/: test_aac.py  test_base.py  test_codec.py  test_docx.py  test_epub.py  test_exceptions.py  test_flac.py  test_gif.py  test_heic.py  test_helpers.py  test_image.py  test_manager.py  test_mp3.py  test_odp.py  test_ods.py  test_odt.py  test_ogg.py  test_pdf.py  test_pptx.py  test_rtf.py  test_tiff.py  test_video.py  test_wav.py  test_webm.py  test_webp.py  test_wmv.py  test_xlsx.py
(+21 files in other folders)
